--- a/Glowb/SupportingFiles/Info.plist
+++ b/Glowb/SupportingFiles/Info.plist
@@ -53,7 +53,7 @@
 		</dict>
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Photos are special \n ✨📸 ✨</string>
+	<string>Photos are special ✨📸 ✨</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
